@@ -1,3 +1,7 @@
+2016-08-30  Tim Head  <betatim@gmail.com>
+
+   * Fix coverage reporting on OSX and rename nosetests.xml to pytests.xml
+
 2016-08-29  Daniel Standage  <daniel.standage@gmail.com>
 
    * doc/dev/getting-started.rst: updated dev environment setup instructions to
